--- a/_sass/prototyping/_front-page.scss
+++ b/_sass/prototyping/_front-page.scss
@@ -1,10 +1,21 @@
-@keyframes slideInFromRight {
+@keyframes slideInFromRightFull {
   0% {
     right: -110%;
     opacity: 0;
   }
   100% {
     right: 0;
+    opacity: 1;
+  }
+}
+
+@keyframes slideInFromRightPlus {
+  0% {
+    right: -110%;
+    opacity: 0;
+  }
+  100% {
+    right: 1em;
     opacity: 1;
   }
 }
@@ -310,12 +321,12 @@
   }
 
   &__images--1 {
-    animation: slideInFromRight 2s;
+    animation: slideInFromRightFull 2s;
     margin: 6em -1em 2em 0;
     position: relative;
 
     img:first-child {
-      animation: slideInFromRight 3s;
+      animation: slideInFromRightPlus 3s;
       position: absolute;
       top: -30%;
       right: 1em;
@@ -368,7 +379,7 @@
   &__images--3 {
     @include display(flex);
     @include align-items(center);
-    animation: slideInFromRight 2s;
+    animation: slideInFromRightFull 2s;
     margin-bottom: 2em;
     margin-right: -50%;
     padding-top: 3em;
@@ -639,7 +650,7 @@
     } // &__author
 
     &:nth-of-type(2) {
-      animation: slideInFromRight 2s;
+      animation: slideInFromRightFull 2s;
     }
 
     @include media($medium-up) {
@@ -663,7 +674,7 @@
       }
 
       &:nth-of-type(3) {
-        animation: slideInFromRight 2s;
+        animation: slideInFromRightFull 2s;
         display: block;
         margin-right: 0;
       }
