Style mobile navigation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,4 +10,11 @@
 	{{ content }}
 
 	</body>
+
+  <script src="//code.jquery.com/jquery-1.12.2.min.js"></script>
+  <script src="{{ "assets/js/plugins.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ "assets/js/prototyping.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ "assets/js/scripts.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ "assets/js/navigation.js" | prepend: site.baseurl }}"></script>
+  
 </html>
