--- a/_sass/prototyping/_contact-page.scss
+++ b/_sass/prototyping/_contact-page.scss
@@ -1,11 +1,8 @@
 .lead-in {
+  @include clearfix;
   padding-bottom: 6em;
   position: relative;
   z-index: 3;
-
-  @include media($large-up) {
-    @include display(flex);
-  }
 
   &__label {
 
@@ -15,38 +12,34 @@
     }
   }
 
-  &__social__wrapper {
-    display: none;
+  &__contact__wrapper {
+    padding-top: 2em;
+
+    &:after {
+      background: palette(brand, base);
+      content: '';
+      height: 2px;
+      position: absolute;
+      top: -2px;
+      width: 5%;
+    }
 
     @include media($large-up) {
       display: block;
+      float: left;
       width: 25%;
     }
-  }
 
-  &__social {
-    @include list-reset;
-    border-top: 2px solid palette(brand, base);
-    padding-top: 2em;
-    width: 25%;
-
-    &__links {
+    a {
       display: block;
-      font-family: $font-custom;
-      font-size: 1.5rem;
-      letter-spacing: .01em;
-      line-height: 1.25;
-      margin-bottom: .5em;
+      font-family: $font-serif;
 
-      a {
+      @include touch-hover('idle') {
+        color: palette(mono, 66);
+      }
 
-        @include touch-hover('idle') {
-          color: palette(mono, 90);
-        }
-
-        @include touch-hover('hover') {
-          color: palette(brand, teal);
-        }
+      @include touch-hover('hover') {
+        color: palette(brand, teal);
       }
     }
   }
@@ -54,6 +47,7 @@
   &__content__wrapper {
 
     @include media($large-up) {
+      float: right;
       width: 70%;
     }
   }
@@ -67,40 +61,6 @@
 
   &__copy {
     font-family: $font-serif;
-
-    a {
-
-      @include touch-hover('idle') {
-        color: inherit;
-      }
-
-      @include touch-hover('hover') {
-        color: inherit;
-      }
-    }
-  }
-
-  &__subhead {
-    font-family: $font-serif;
-    font-size: 1.5rem;
-    font-weight: $font-weight-bold;
-    margin: 2em 0 1em;
-  }
-
-  &__buttons {
-    @include display(flex);
-    @include justify-content(flex-start);
-    @include align-items(center);
-
-    a {
-      text-align: center;
-    }
-
-    em {
-      font-family: $font-custom;
-      font-weight: $font-custom-weight-normal;
-      margin: 0 1em;
-    }
   }
 }
 
@@ -108,51 +68,4 @@
   background: palette(mono, 10);
   position: relative;
   z-index: 3;
-}
-
-.lead-out {
-  background: palette(brand, denim);
-  padding: 6em 0;
-  position: relative;
-  text-align: center;
-  z-index: 3;
-
-  &__headline {
-    color: palette(mono, white);
-    clear: none;
-    font-family: $font-custom;
-    font-size: 4rem;
-    font-weight: $font-custom-weight-normal;
-    line-height: 1;
-    margin-bottom: .5em;
-  }
-
-  &__copy {
-    color: palette(mono, white);
-    font-family: $font-serif;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 800px;
-  }
-
-  &__phone {
-    display: block;
-    font-family: $font-serif;
-    font-size: 2rem;
-    font-weight: $font-weight-bold;
-
-    @include touch-hover('idle') {
-      color: palette(mono, white);
-    }
-
-    @include touch-hover('hover') {
-      color: palette(mono, white);
-    }
-  }
-
-  a.button.button__primary {
-    color: palette(mono, white);
-    display: inline-block;
-    margin-top: 1em;
-  }
 }
