Style form, refactor

--- a/_sass/prototyping.scss
+++ b/_sass/prototyping.scss
@@ -11,8 +11,9 @@
 "base/colors",
 "base/variables",
 "base/typesizes",
+"component/buttons.scss",
 "layout/breakpoints";
 
-@import 
+@import
 "prototyping/*",
 "refills/*";
