--- a/_sass/prototyping/_contact-page.scss
+++ b/_sass/prototyping/_contact-page.scss
@@ -19,6 +19,13 @@
   color: palette(mono, white);
 }
 
+.banner {
+
+  &__image__wrapper {
+    max-height: 900px;
+  }
+}
+
 .lead-in,
 .contact-form {
   position: relative;
@@ -124,6 +131,28 @@
       margin-right: 4%;
     }
 
+    &__select-wrapper {
+      position: relative;
+
+      &:after { // Triangle for select
+        content:'▼';
+        padding-right: 1em;
+        position: absolute;
+        top: 50%;
+        right: 0;
+        transform: translateY(-50%);
+        z-index: 1;
+
+        @include media($medium-up) {
+          right: 52%;
+        }
+      }
+    }
+
+    &__column-3 {
+      margin-bottom: 4em;
+    }
+
     &__column-5 {
       text-align: right;
     }
@@ -150,12 +179,12 @@
     select {
       border: 0;
       border-radius: 0;
-      margin-bottom: 4em;
     }
 
     input[type="text"] {
       background: transparent;
       border-bottom: 1px solid palette(mono, base);
+      margin-bottom: 4em;
       outline: 0;
     }
 
