New file for Greymatter, helper for Prototyping
Removed the need for two files, built in the needed scaffold includes. Changed the head to link to the new greymatter.css source file.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,8 +9,7 @@
 	<!-- <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
 	<!-- Place favicon.ico in the root directory -->
 
-	<link rel="stylesheet" href="{{ "assets/css/styles.css" | prepend: site.baseurl }}">
-	<link rel="stylesheet" href="{{ "assets/css/prototyping.css" | prepend: site.baseurl }}">
+	<link rel="stylesheet" href="{{ "assets/css/greymatter.css" | prepend: site.baseurl }}">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:500|Source+Sans+Pro:300,400,400i,900" rel="stylesheet">
 
