--- a/_sass/prototyping/_fonts.scss
+++ b/_sass/prototyping/_fonts.scss
@@ -7,7 +7,7 @@
 //$font-serif: $georgia;
 //$font-mono: $monospace;
 
-//$font-custom: 'Patrick Hand', $font-sans;
+//$font-custom: 'Google Font Name', $font-sans;
 
 // Most Google fonts and others define the weight numerically
 //$font-custom-weight-light: 200;
@@ -15,16 +15,13 @@
 //$font-custom-weight-bold: 700;
 
 
-// Font Awesome for prototyping
-// We use the CDN to serve the dynamic CSS but need to redeclare the location of the font-files here:
-@font-face {
-  font-family: 'FontAwesome';
-  src: url('../fonts/fontawesome-webfont.eot?v=4.5.0');
-  src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.5.0') format('embedded-opentype'),
-    url('../fonts/fontawesome-webfont.woff2?v=4.5.0') format('woff2'),
-    url('../fonts/fontawesome-webfont.woff?v=4.5.0') format('woff'),
-    url('../fonts/fontawesome-webfont.ttf?v=4.5.0') format('truetype'),
-    url('../fonts/fontawesome-webfont.svg?v=4.5.0#fontawesomeregular') format('svg');
+@mixin icon-font($content) {
+  content: $content;
+  display: inline-block;
+  font-family: FontAwesome;
+  font-style: normal;
   font-weight: normal;
-  font-style: normal
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
