--- a/_sass/prototyping/_footer.scss
+++ b/_sass/prototyping/_footer.scss
@@ -1,23 +1,24 @@
 //<footer class="mainfoot">
-//	<div class="layout--container">
-//		<p class="mainfoot--list">
-//			<span class="mainfoot--link">All pages</span> 
-//			<a href="/grey-matter/readme/" class="mainfoot--link">Read Me</a>, 
+//	<div class="layout__container">
+//		<p class="mainfoot__list">
+//			<span class="mainfoot__link">All pages</span> 
+//			<a href="/grey-matter/readme/" class="mainfoot__link">Read Me</a>, 
 //		</p>
-//		<p class="mainfoot--copyright">©2016 Oomph, Inc.</p>
+//		<p class="mainfoot__copyright">©2016 Oomph, Inc.</p>
 //	</div>
 //</footer>
 
 .mainfoot {
   @include container-light('1px 0 0 0');
+  background-color: $color-footer;
   padding-top: $vert-line-height;
   padding-bottom: $vert-line-height/2;
 
-  &--list {
+  &__list {
     margin-bottom: 1rem;
   }
   
-  &--link {
+  &__link {
 
     @include touch-hover('idle') {
       color: palette(mono, 75);
