Removing references to Bourbon functions

--- a/_sass/refills/_nav-bar.scss
+++ b/_sass/refills/_nav-bar.scss
@@ -160,7 +160,8 @@ header.navigation {
     }
 
     > a::after {
-      @include position(absolute, auto -0.4em auto auto);
+      position: absolute;
+      right: -.4em;
       color: $navigation-color;
       content: "\25BE";
     }
