--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,13 @@
+  	{% assign pages = site.pages | sort:'nav-title' %}
   	<footer class="mainfoot">
-  		<div class="layout--container">
-  			<p class="mainfoot--list">
-  				<span class="mainfoot--link">All pages: </span> 
-  				{% for page in site.pages | sort:'title' %}
-  				<a href="{{ site.baseurl}}{{ page.permalink }}" class="mainfoot--link">{% if page.nav-title %}{{ page.nav-title }}{% else %}{{ page.title }}{% endif %}</a>{% unless forloop.last %}, {% endunless %}
+  		<div class="layout__container">
+  			<p class="mainfoot__list">
+  				<span class="mainfoot__link">All pages: </span> 
+  				{% for p in pages %}
+  				<a href="{{ site.baseurl}}{{ p.permalink }}" class="mainfoot__link">{% if p.nav-title %}{{ p.nav-title }}{% else %}{{ p.title }}{% endif %}</a>{% unless forloop.last %}, {% endunless %}
   				{% endfor %}
   			</p>
-  			<p class="mainfoot--copyright">&copy;{{ 'now' | date: '%Y' }} Oomph, Inc.</p>
+  			<p class="mainfoot__copyright">&copy;{{ 'now' | date: '%Y' }} Oomph, Inc.</p>
   		</div>
   	</footer>
 	</div>
