--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,8 @@
 	
 	<div class="layout">
   	<header class="mainhead">
-  		<div class="layout--container">
-  			<a class="mainhead--title alpha" href="{{ site.baseurl }}">Grey Matter</a>
+  		<div class="layout__container">
+  			<a class="mainhead__title alpha" href="{{ site.baseurl }}">Grey Matter</a>
   			
   			{% include navigation.html %}
   		</div>
