--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,11 +1,11 @@
 ---
 layout: default
 ---
-	<header class="content--header">
-		<h1 class="content--title giga">{{ page.title }}</h1>
-	</header>
-	<article class="content--main">
+  <header class="content__header">
+    <h1 class="content__title giga">{{ page.title }}</h1>
+  </header>
+  <article class="content__main">
 
-		{{ content }}
+    {{ content }}
 
-	</article>
+  </article>
